[fix] : modal 길이가 길어 위 title과 아래의 button이 잘리는 문제 사이의 modal__content에 overflow를 설정하여 해결

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -26,6 +26,10 @@
     top: 0;
     padding: 10px 25px;
     width: 40%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
 
     .modal__title {
       margin: 0;
@@ -33,6 +37,7 @@
     }
 
     .modal__content {
+      overflow: auto;
       ul {
         display: flex;
         flex-direction: column;
